manifest/service-registry-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service-registry
  labels:
    app: service-registry
spec:
  host: service-registry.apps.CLUSTER_DOMAIN
  to:
    kind: Service
    name: service-registry-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
